--- a/admin/package.json
+++ b/admin/package.json
@@ -21,9 +21,9 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.25",
     "pdfmake": "^0.2.20",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-collapse": "^5.1.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-inner-image-zoom": "^4.0.1",
@@ -33,6 +33,7 @@
     "react-router-dom": "^7.4.0",
     "react-simple-wysiwyg": "^3.4.0",
     "recharts": "^2.15.2",
+    "socket.io-client": "^4.8.3",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.15"
