--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.4.6",
     "@tailwindcss/vite": "^4.0.13",
     "axios": "^1.13.2",
+    "cloudinary": "^2.9.0",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.13",
     "react": "^19.0.0",
